--- a/css/biz2/main.css
+++ b/css/biz2/main.css
@@ -138,7 +138,7 @@
 .ui-check label { margin-left: 8px; cursor: pointer; }
 /* 세로형 테이블 스타일 */
 .com-view-table table { width: 100%; border-top: 1px solid var(--bd-color); }
-.com-view-table table th { height: 70px; background: var(--bg-color); border-top: 1px solid var(--bd-color);  border-right: 1px solid var(--bd-color); border-bottom: 1px solid var(--bd-color); text-align: center; font-weight: bold;}
+.com-view-table table th { height: 70px; background: var(--bg-color); border-right: 1px solid var(--bd-color); border-bottom: 1px solid var(--bd-color); text-align: center; font-weight: bold;}
 .com-view-table table th:last-child { border-right: 0; }
 .com-view-table table td { height: 70px; padding: 10px; border-right: 1px solid var(--bd-color); border-bottom: 1px solid var(--bd-color); font-weight: 500; text-align: center;  }
 .com-view-table table td.no-data {color: #b5b5b5;}
